test/typeCheckTest/fail/test23.ic
class BadNot {
	void main (string [] args) {
		boolean cond = !args[0];
	}
}